--- a/.github/workflows/frontend-CI.yml
+++ b/.github/workflows/frontend-CI.yml
@@ -10,8 +10,58 @@ on:
       - "frontend/**"
 
 jobs:
-  checkout-only:
+  build-test:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: frontend
+
     steps:
-      - name: Checkout repo
+      - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Setup Node (Angular 12 werkt goed met Node 18)
+        uses: actions/setup-node@v4
+        with:
+          node-version: "18"
+          cache: "npm"
+          cache-dependency-path: "frontend/package-lock.json"
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Install Chromium for headless tests
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y chromium-browser || sudo apt-get install -y chromium
+        env:
+          DEBIAN_FRONTEND: noninteractive
+
+      - name: Build
+        run: npx ng build --configuration production
+
+      - name: Test (with coverage)
+        env:
+          CHROME_BIN: /usr/bin/chromium || /usr/bin/chromium-browser
+        run: |
+          npm test -- --watch=false --browsers=ChromeHeadless --code-coverage || true
+
+      - name: Coverage summary
+        uses: irongut/CodeCoverageSummary@v1.3.0
+        with:
+          filename: "frontend/coverage/**/lcov.info"
+          badge: true
+          format: "markdown"
+          thresholds: "60 80"
+
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-coverage
+          path: frontend/coverage
+
+      - name: Upload production build
+        uses: actions/upload-artifact@v4
+        with:
+          name: frontend-dist
+          path: frontend/dist
