--- a/.github/workflows/frontend-CI.yml
+++ b/.github/workflows/frontend-CI.yml
@@ -20,21 +20,22 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node (Angular 12 werkt goed met Node 18)
+      - name: Setup Node (Angular 12 ↔ Node 18)
         uses: actions/setup-node@v4
         with:
           node-version: "18"
           cache: "npm"
           cache-dependency-path: "frontend/package-lock.json"
 
-      - name: Install dependencies
+      - name: Install deps
         run: npm ci
 
+      # Chrome voor Karma ChromeHeadless
       - name: Setup Chrome
         id: chrome
         uses: browser-actions/setup-chrome@v1
 
-      - name: Build
+      - name: Build (Angular)
         run: npx ng build --configuration production
 
       - name: Test (with coverage)
@@ -42,23 +43,36 @@ jobs:
           CHROME_BIN: ${{ steps.chrome.outputs.chrome-path }}
         run: |
           npm test -- --watch=false --browsers=ChromeHeadless --code-coverage || true
+          # kopieer het lcov-bestand naar een vaste locatie voor de reporter
+          LCOV=$(find coverage -name lcov.info -print -quit || true)
+          if [ -f "$LCOV" ]; then cp "$LCOV" coverage/lcov.info; fi
 
-      - name: Coverage summary
+      - name: Coverage summary (Job Summary)
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          filename: "frontend/coverage/**/lcov.info"
+          filename: "frontend/coverage/lcov.info"
           badge: true
           format: "markdown"
           thresholds: "60 80"
+
+      - name: Better Test Reports (PR comment & artifact)
+        uses: mridang/action-test-reporter@v1.3.0
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          working-directory: frontend
+          coverage-file: frontend/coverage/lcov.info
+          upload-coverage-report: true
 
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v4
         with:
           name: frontend-coverage
           path: frontend/coverage
+          if-no-files-found: warn
 
       - name: Upload production build
         uses: actions/upload-artifact@v4
         with:
           name: frontend-dist
           path: frontend/dist
+          if-no-files-found: warn
