--- a/.github/workflows/frontend-CI.yml
+++ b/.github/workflows/frontend-CI.yml
@@ -43,24 +43,30 @@ jobs:
           CHROME_BIN: ${{ steps.chrome.outputs.chrome-path }}
         run: |
           npm test -- --watch=false --browsers=ChromeHeadless --code-coverage || true
-          # kopieer het lcov-bestand naar een vaste locatie voor de reporter
-          LCOV=$(find coverage -name lcov.info -print -quit || true)
-          if [ -f "$LCOV" ]; then cp "$LCOV" coverage/lcov.info; fi
+
+      # Toon eventueel de coverage-structuur in de logs (handig bij debuggen)
+      - name: List coverage files (debug)
+        if: always()
+        run: |
+          echo "Looking for lcov.info under frontend/coverage/"
+          ls -R coverage || true
 
       - name: Coverage summary (Job Summary)
+        if: ${{ hashFiles('frontend/coverage/**/lcov.info') != '' }}
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          filename: "frontend/coverage/lcov.info"
+          filename: "frontend/coverage/**/lcov.info"
           badge: true
           format: "markdown"
           thresholds: "60 80"
 
       - name: Better Test Reports (PR comment & artifact)
+        if: ${{ hashFiles('frontend/coverage/**/lcov.info') != '' }}
         uses: mridang/action-test-reporter@v1.3.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           working-directory: frontend
-          coverage-file: frontend/coverage/lcov.info
+          coverage-file: frontend/coverage/**/lcov.info
           upload-coverage-report: true
 
       - name: Upload coverage artifact
@@ -68,7 +74,7 @@ jobs:
         with:
           name: frontend-coverage
           path: frontend/coverage
-          if-no-files-found: warn
+          if-no-files-found: ignore
 
       - name: Upload production build
         uses: actions/upload-artifact@v4
