--- a/.github/workflows/backend-CI.yml
+++ b/.github/workflows/backend-CI.yml
@@ -36,24 +36,29 @@ jobs:
       - name: Test (with coverage)
         run: |
           npm test -- --coverage || true
-          # zorg voor een vaste lcov-locatie
-          LCOV=$(find coverage -name lcov.info -print -quit || true)
-          if [ -f "$LCOV" ]; then cp "$LCOV" coverage/lcov.info; fi
+
+      - name: List coverage files (debug)
+        if: always()
+        run: |
+          echo "Looking for lcov.info under backend/coverage/"
+          ls -R coverage || true
 
       - name: Coverage summary (Job Summary)
+        if: ${{ hashFiles('backend/coverage/**/lcov.info') != '' }}
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          filename: "backend/coverage/lcov.info"
+          filename: "backend/coverage/**/lcov.info"
           badge: true
           format: "markdown"
           thresholds: "60 80"
 
       - name: Better Test Reports (PR comment & artifact)
+        if: ${{ hashFiles('backend/coverage/**/lcov.info') != '' }}
         uses: mridang/action-test-reporter@v1.3.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           working-directory: backend
-          coverage-file: backend/coverage/lcov.info
+          coverage-file: backend/coverage/**/lcov.info
           upload-coverage-report: true
 
       - name: Upload coverage
@@ -61,7 +66,7 @@ jobs:
         with:
           name: backend-coverage
           path: backend/coverage
-          if-no-files-found: warn
+          if-no-files-found: ignore
 
       - name: Upload build
         uses: actions/upload-artifact@v4
