--- a/backend/package.json
+++ b/backend/package.json
@@ -14,5 +14,13 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.3",
     "mongoose": "^6.2.5"
+  },
+  {
+  "jest": {
+    "testEnvironment": "node",
+    "coverageDirectory": "coverage",
+    "collectCoverage": true,
+    "coverageReporters": ["lcov", "text-summary"],
+    "testMatch": ["**/__tests__/**/*.js?(x)", "**/?(*.)+(spec|test).js?(x)"]
   }
 }
