--- a/.github/workflows/frontend-CI.yml
+++ b/.github/workflows/frontend-CI.yml
@@ -17,38 +17,30 @@ jobs:
         working-directory: frontend
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node (Angular 12 ↔ Node 18)
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: "18"
           cache: "npm"
           cache-dependency-path: "frontend/package-lock.json"
 
-      - name: Install deps
-        run: npm ci
+      - name: Install dependencies
+        run: npm install
 
-      # Chrome voor Karma ChromeHeadless
-      - name: Setup Chrome
+      - name: Setup Chrome (for Karma)
         id: chrome
         uses: browser-actions/setup-chrome@v1
 
-      - name: Build (Angular)
+      - name: Build Angular app
         run: npx ng build --configuration production
 
-      - name: Test (with coverage)
+      - name: Run unit tests with coverage
         env:
           CHROME_BIN: ${{ steps.chrome.outputs.chrome-path }}
         run: |
-          npm test -- --watch=false --browsers=ChromeHeadless --code-coverage || true
-
-      # Toon eventueel de coverage-structuur in de logs (handig bij debuggen)
-      - name: List coverage files (debug)
-        if: always()
-        run: |
-          echo "Looking for lcov.info under frontend/coverage/"
+          npm test -- --watch=false --browsers=ChromeHeadless --code-coverage
+          echo "Found coverage files:"
           ls -R coverage || true
 
       - name: Coverage summary (Job Summary)
@@ -60,7 +52,7 @@ jobs:
           format: "markdown"
           thresholds: "60 80"
 
-      - name: Better Test Reports (PR comment & artifact)
+      - name: Better Test Reports (table in summary)
         if: ${{ hashFiles('frontend/coverage/**/lcov.info') != '' }}
         uses: mridang/action-test-reporter@v1.3.0
         with:
@@ -68,17 +60,3 @@ jobs:
           working-directory: frontend
           coverage-file: frontend/coverage/**/lcov.info
           upload-coverage-report: true
-
-      - name: Upload coverage artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: frontend-coverage
-          path: frontend/coverage
-          if-no-files-found: ignore
-
-      - name: Upload production build
-        uses: actions/upload-artifact@v4
-        with:
-          name: frontend-dist
-          path: frontend/dist
-          if-no-files-found: warn
