--- a/.github/workflows/frontend-CI.yml
+++ b/.github/workflows/frontend-CI.yml
@@ -1,4 +1,4 @@
-name: Backend
+name: Frontend
 
 on:
   push:
@@ -9,37 +9,44 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    # => ALLE npm/ng commando’s in de submap ./frontend uitvoeren
     defaults:
       run:
-        working-directory: frontend   # 👈 alle run-commando’s uitvoeren in ./frontend
+        working-directory: frontend
 
     steps:
+      # 1) Checkout code op de runner
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2) Node + npm klaarzetten (cache op je lockfile in frontend/)
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
           node-version: '18'
           cache: 'npm'
-          cache-dependency-path: frontend/package-lock.json  # 👈 correcte cache-path
+          cache-dependency-path: frontend/package-lock.json
 
+      # 3) Dependencies installeren (vereist de lockfile)
       - name: Install dependencies
         run: npm ci
 
+      # 4) Build (Angular)
       - name: Build the code
         run: npx ng build --configuration production
 
+      # 5) Unit tests met coverage (headless Chrome)
       - name: Test the code (unit tests + coverage)
         run: |
           sudo apt-get update
           sudo apt-get install -y xvfb
           xvfb-run -a npx ng test --watch=false --code-coverage --browsers=ChromeHeadless
 
+      # 6) Mooi coverage-overzicht in de run (Job Summary)
       - name: Generate coverage summary
         uses: irongut/CodeCoverageSummary@v1.3.0
         with:
-          filename: frontend/coverage/**/lcov.info  # 👈 let op het pad
+          filename: frontend/coverage/**/lcov.info
           badge: true
           fail_below_min: false
           format: markdown
@@ -47,6 +54,7 @@ jobs:
           output: both
           thresholds: '60 80'
 
+      # 7) Volledige HTML coverage als artifact
       - name: Upload coverage HTML
         uses: actions/upload-artifact@v4
         with:
