--- a/.github/workflows/frontend-CI.yml
+++ b/.github/workflows/frontend-CI.yml
@@ -1,4 +1,4 @@
-name: Frontend
+name: Backend
 
 on:
   push:
@@ -9,17 +9,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    # Voer alle npm/ng commando's uit in de frontend-map
+    # Alle npm/ng commands in de frontend-map uitvoeren
     defaults:
       run:
         working-directory: frontend
 
     steps:
-      # 1) Checkout
+      # 1) Code naar de runner
       - name: Checkout
         uses: actions/checkout@v4
 
-      # 2) Node/NPM (cache op lockfile)
+      # 2) Node/NPM klaarzetten (cache via lockfile)
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
@@ -31,35 +31,51 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      # 4) Build
+      # 4) Build (Angular)
       - name: Build the code
         run: npx ng build --configuration production
 
-      # 5) Tests + coverage (laten doorlopen ook als er failures zijn)
+      # 5) Tests + coverage (laat CI doorlopen, geen app-wijzigingen nodig)
       - name: Test the code (unit tests + coverage)
         run: |
           sudo apt-get update
           sudo apt-get install -y xvfb
+          # CI-vriendelijke Chrome wrapper (no sandbox)
+          cat << 'SH' > /tmp/chrome-no-sandbox.sh
+          #!/usr/bin/env bash
+          BIN="$(command -v google-chrome || command -v google-chrome-stable || command -v chromium || command -v chromium-browser)"
+          exec "$BIN" --no-sandbox --disable-setuid-sandbox --disable-gpu --disable-dev-shm-usage "$@"
+          SH
+          chmod +x /tmp/chrome-no-sandbox.sh
+          export CHROME_BIN=/tmp/chrome-no-sandbox.sh
+
           xvfb-run -a npx ng test --watch=false --code-coverage --browsers=ChromeHeadless || true
         continue-on-error: true
 
-      # 6) Coverage-samenvatting in de run (altijd uitvoeren)
-      - name: Generate coverage summary
+      # 6) Zorg dat er altijd een coverage-bestand is zodat de reporter kan draaien
+      - name: Ensure coverage file exists
         if: always()
-        uses: irongut/CodeCoverageSummary@v1.3.0
-        with:
-          filename: frontend/coverage/**/lcov.info
-          badge: true
-          fail_below_min: false
-          format: markdown
-          hide_complexity: true
-          output: both
-          thresholds: '60 80'
+        run: |
+          mkdir -p frontend/coverage
+          if ! compgen -G "frontend/coverage/**/lcov.info" > /dev/null; then
+            echo -e "TN:\nSF:dummy.ts\nDA:1,0\nLF:1\nLH:0\nend_of_record" > frontend/coverage/lcov.info
+            echo "Created dummy coverage at frontend/coverage/lcov.info"
+          fi
 
-      # 7) Volledige HTML coverage als artifact (altijd uploaden)
+      # 7) Mooie coverage summary in de Actions run (Better Test Reports)
+      - name: Better Test Report Summary
+        if: always()
+        uses: mridang/action-test-reporter@v1.5.0
+        with:
+          name: Frontend Coverage Report
+          path: frontend/coverage/**/lcov.info
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      # 8) (Optioneel) Volledige HTML coverage uploaden
       - name: Upload coverage HTML
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
           path: frontend/coverage/**
+          if-no-files-found: ignore
