--- a/.github/workflows/frontend-CI.yml
+++ b/.github/workflows/frontend-CI.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Build the code
         run: npx ng build --configuration production
 
-            # 5) Tests + coverage (laat doorlopen bij failures)
+      # 5) Tests + coverage (laat doorlopen bij failures)
       - name: Test the code (unit tests + coverage)
         run: |
           sudo apt-get update
@@ -51,32 +51,32 @@ jobs:
           xvfb-run -a npx ng test --watch=false --code-coverage --browsers=ChromeHeadless || true
         continue-on-error: true
 
-      # 6) Normaliseer naar één bestand binnen ./frontend (NIET prefixen met 'frontend/')
-      - name: Locate/normalize lcov path
+      # 6) Vind het échte lcov.info dat Angular schreef en exporteer het pad
+      - name: Find lcov.info
+        id: lcov
         if: always()
         run: |
-          mkdir -p coverage
           FOUND=$(ls -1 coverage/*/lcov.info 2>/dev/null | head -n 1 || true)
-          if [ -n "$FOUND" ]; then
-            cp "$FOUND" coverage/lcov.info
-            echo "Using $FOUND -> coverage/lcov.info"
-          elif [ -f coverage/lcov.info ]; then
-            echo "Using existing coverage/lcov.info"
-          else
-            echo -e "TN:\nSF:dummy.ts\nDA:1,0\nLF:1\nLH:0\nend_of_record" > coverage/lcov.info
-            echo "Created dummy coverage at coverage/lcov.info"
+          if [ -z "$FOUND" ] && [ -f coverage/lcov.info ]; then FOUND="coverage/lcov.info"; fi
+          if [ -z "$FOUND" ]; then
+            echo "No real lcov found" >&2
+            exit 0     # ga door; reporter kan dan overslaan
           fi
+          echo "lcov=$FOUND" >> "$GITHUB_OUTPUT"
+          echo "Using lcov at: $FOUND"
+        # let op: working-directory=frontend staat bovenaan bij defaults.run
 
-      # 7) Better Test Reports Action (pad is relatief tot working-directory=frontend)
+      # 7) Better Test Reports Action (alleen draaien als we een echt lcov-pad hebben)
       - name: Better Test Reports Action
-        if: always()
+        if: ${{ always() && steps.lcov.outputs.lcov != '' }}
         uses: mridang/action-test-reporter@v1.3.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          coverage-file: frontend/coverage/lcov.info
+          working-directory: frontend
+          coverage-file: ${{ steps.lcov.outputs.lcov }}
           upload-coverage-report: true
 
-      # 8) HTML coverage als artifact (pad is t.o.v. repo-root, dus mét 'frontend/')
+      # 8) (optioneel) Upload ook het HTML coverage rapport als artifact als het bestaat
       - name: Upload coverage HTML
         if: always()
         uses: actions/upload-artifact@v4
