--- a/.github/workflows/frontend-CI.yml
+++ b/.github/workflows/frontend-CI.yml
@@ -51,36 +51,44 @@ jobs:
           xvfb-run -a npx ng test --watch=false --code-coverage --browsers=ChromeHeadless || true
         continue-on-error: true
 
-      # 6) Vind het échte lcov.info dat Angular schreef en exporteer het pad
+       # 6) Vind het échte lcov.info (ongeacht waar karma het neerzet)
       - name: Find lcov.info
         id: lcov
         if: always()
+        shell: bash
         run: |
-          FOUND=$(ls -1 coverage/*/lcov.info 2>/dev/null | head -n 1 || true)
-          if [ -z "$FOUND" ] && [ -f coverage/lcov.info ]; then FOUND="coverage/lcov.info"; fi
-          if [ -z "$FOUND" ]; then
-            echo "No real lcov found" >&2
-            exit 0     # ga door; reporter kan dan overslaan
+          set -euo pipefail
+          echo "PWD=$(pwd)"
+          # We zitten in working-directory: frontend (via defaults.run)
+          # Zoek maximaal 4 niveaus diep zodat alle gangbare paden meedoen.
+          FOUND="$(find . -type f -name lcov.info -maxdepth 4 | head -n 1 || true)"
+          if [ -n "${FOUND:-}" ]; then
+            # strip de leading "./" zodat het pad netjes is voor de action input
+            FOUND="${FOUND#./}"
+            echo "Gevonden coverage-bestand: $FOUND"
+            echo "lcov=$FOUND" >> "$GITHUB_OUTPUT"
+          else
+            echo "Geen lcov.info gevonden."
+            echo "lcov=" >> "$GITHUB_OUTPUT"
           fi
-          echo "lcov=$FOUND" >> "$GITHUB_OUTPUT"
-          echo "Using lcov at: $FOUND"
-        # let op: working-directory=frontend staat bovenaan bij defaults.run
 
-      # 7) Better Test Reports Action (alleen draaien als we een echt lcov-pad hebben)
+      # 7) Better Test Reports Action (alleen draaien als we een pad hebben)
       - name: Better Test Reports Action
         if: ${{ always() && steps.lcov.outputs.lcov != '' }}
         uses: mridang/action-test-reporter@v1.3.0
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          working-directory: frontend
+          working-directory: frontend              # inputs zijn t.o.v. repo-root; met working-directory kan je pad korter blijven
           coverage-file: ${{ steps.lcov.outputs.lcov }}
           upload-coverage-report: true
 
-      # 8) (optioneel) Upload ook het HTML coverage rapport als artifact als het bestaat
+      # 8) (optioneel) HTML coverage uploaden – zoek breed zodat we niets missen
       - name: Upload coverage HTML
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: coverage-report
-          path: frontend/coverage/**
+          path: |
+            frontend/coverage/**
+            frontend/**/coverage/**
           if-no-files-found: ignore
