--- a/.github/workflows/frontend-CI.yml
+++ b/.github/workflows/frontend-CI.yml
@@ -1,12 +1,8 @@
-name: Frontend CI
+name: Frontend
 
 on:
   push:
-    paths:
-      - "frontend/**"
-  pull_request:
-    paths:
-      - "frontend/**"
+    branches: [ main ]
 
 jobs:
   build:
